--- a/Entrega-1/package.json
+++ b/Entrega-1/package.json
@@ -2,15 +2,14 @@
   "name": "plantilladocumentacion",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "type": "module",
   "scripts": {
     "start": "node src/app.js",
-    "dev": "nodemon src/app.js",
-    "test": "mocha test/supertest.test.js"
+    "dev": "nodemon src/app.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Sergio Mendoza Vasquez",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -19,10 +18,11 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.5",
     "multer": "^1.4.5-lts.1",
-    "supertest": "^6.3.3"
+    "dotenv": "^16.4.7",
+    "@faker-js/faker": "^7.6.0"
+
   },
-  "devDependencies": {
-    "chai": "^4.3.7",
-    "mocha": "^10.1.0"
+  "devDependencies":  {
+    "nodemon": "^3.1.9"
   }
 }
