--- a/Entrega-1/package.json
+++ b/Entrega-1/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "plantilladocumentacion",
+  "name": "entrega1",
   "version": "1.0.0",
-  "description": "",
+  "description": "Entrega 1 del proyecto Final",
   "main": "app.js",
   "type": "module",
   "scripts": {
