--- a/Entrega-Final/.env
+++ b/Entrega-Final/.env
@@ -1,6 +1,6 @@
 PORT= 3000
 #Persistence config
-MONGODB_DBNAME="Testing_backed3"
+MONGODB_DBNAME="Testing_NestApp"
 MONGO_USER="Tester"
 MONGO_PASS="T3sT3rCoder"
 PERSISTENCE="MONGO"
