--- a/Entrega-Final/package.json
+++ b/Entrega-Final/package.json
@@ -20,12 +20,14 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.8.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
+    "bcrypt": "^6.0.0",
     "mongoose": "^8.15.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
