--- a/Entrega-Final/package.json
+++ b/Entrega-Final/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.1",
   "description": "entrega Final del proyecto para el curso Backend III - testing",
   "author": "Sergio Mendoza Vasquez",
-  "private": true,
-  "license": "UNLICENSED",
+  "license": "ISC",
   "scripts": {
     "build": "nest build",
+    "docker-up":"docker-compose up --build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -27,11 +27,13 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.2.0",
     "bcrypt": "^6.0.0",
     "mongoose": "^8.15.0",
     "nest-winston": "^1.10.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.17.0"
   },
   "devDependencies": {
